application/layouts/application/default.theme/css/application.css
/**
 * Override demo stuff
 */
body {
   background-image: none;
}
body::before {
   border: none;
   display: none;
}
.app-content-wrapper {
   margin-top: 90px;
}

/**
 * http://laxarjs.org style navigation
 */
.navbar-fixed-top {
   background-color: #626262;
   border: 1px solid #444;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
}

.navbar-inverse {
   background-color: #626262;
}
.navbar-inverse .navbar-nav > li > a {
   color: #fff;
   line-height: 22px;
   font-size: 16px;
}
.navbar-inverse .navbar-nav > li > a:focus,
.navbar-inverse .navbar-nav > li > a:hover,
.navbar-inverse .navbar-nav > .open > a,
.navbar-inverse .navbar-nav > .open > a:focus,
.navbar-inverse .navbar-nav > .open > a:hover {
   color: #fff;
   background-color: #ff9900;
}

.navbar-brand h1 {
   font-size: 2rem;
   font-weight: 300;
   color: #fff;
   margin: 0;
   line-height: 22px;
}
.navbar-brand h1 span {
   color: #ff9900;
   font-weight: 200;
}
.navbar-brand h1 + div.ax-local-intro-text {
   color: #999;
   font-size: 0.9rem;
   margin-top: -0.2rem;
}

.app-content h2 {
   margin-top: 0.4ex;
}

.app-github {
   padding-left: 26px;
   padding-right: 26px;
}

.ax-popup {
   margin-top: -20px;
   margin-bottom: -20px;
   height: auto !important;
}

@media (max-width: 640px) {

   .app-content {
      padding-top: 60px;
      border-radius: 0;
   }

   .app-content-wrapper {
      margin-top: 0;
   }

   body > div > div.container {
      padding-left: 0;
      padding-right: 0;
   }

   .ax-popup > div > div.modal-dialog {
      padding: 0;
      margin: 0;
   }

   .ax-popup .modal-content {
      border-radius: 0;
      border-left: none;
      border-right: none;
   }

}

@media (max-width: 460px) {

   body > div > div.container {
      -webkit-transform-origin: top;
              transform-origin: top;
      -webkit-transition: 0.3s ease-in -webkit-transform, 0.3s ease-in -webkit-filter, 0.3s ease-in filter;
              transition: 0.3s ease-in transform, 0.3s ease-in filter;

      -webkit-transform: scale(1, 1);
              transform: scale(1, 1);
      -webkit-transform: scale3d(1, 1, 1);
              transform: scale3d(1, 1, 1);
   }

   body[style*="overflow:"] > div > div.container {
      box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);

      -webkit-transform: scale(0.618, 0.618);
              transform: scale(0.618, 0.618);
      -webkit-transform: scale3d(0.618, 0.618, 1);
              transform: scale3d(0.618, 0.618, 1);
      -webkit-filter: blur(1px) brightness(0.9);
              filter: blur(1px) brightness(0.9);
   }

   .modal {
      padding-top: 184px;
   }

   .ax-popup {
      opacity: 0;
      -webkit-transition: 0.35s ease-out -webkit-transform, 0.3s ease-in opacity;
              transition: 0.35s ease-out transform, 0.3s ease-in opacity;
      -webkit-transform: translate(0, 220px);
              transform: translate(0, 220px);
      -webkit-transform: translate3d(0, 220px, 0);
              transform: translate3d(0, 220px, 0);
   }

   .ax-popup.ax-showing {
      opacity: 1;
      -webkit-transform: translate(0, 0);
              transform: translate(0, 0);
      -webkit-transform: translate3d(0, 0, 0);
              transform: translate3d(0, 0, 0);
   }

   .ax-popup div.tab-content {
      max-height: none;
      min-height: 200px;
   }

}

